# rfgrep

./: .deepsource.toml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GITHUB_RELEASE_v0.2.1.md  INSTALLATION_GUIDE.md  LICENSE  PACKAGING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.2.0.md  RELEASE_SUMMARY_v0.2.0.md  Release0.2.1.md  SECURITY.md  q  rfgrep-wrapper.sh  test_completions.sh  test_man_pages.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: check_regressions.py  generate_visualizations.py  store_benchmarks.py
.github/workflows/: bench.yml  ci.yml  release.yml  snap-release.yml
benches/: compare.rs  run.sh
benchmarks/: benchmarks.sql
man/: Makefile  README.md  rfgrep-completions.1  rfgrep-interactive.1  rfgrep-list.1  rfgrep-plugins.1  rfgrep-search.1  rfgrep-tui.1  rfgrep.1
prime/meta/: snap.yaml
scripts/: build_snap.sh  publish_snap.sh  release.sh  run_benchmarks.rs  test_snap.sh
snap/: snapcraft.yaml
src/: app.rs  app_simple.rs  cli.rs  clipboard.rs  config.rs  error.rs  file_types.rs  interactive.rs  lib.rs  list.rs  main.rs  memory.rs  metrics.rs  output_formats.rs  plugin_cli.rs  plugin_system.rs  processor.rs  progress.rs  search.rs  search_algorithms.rs  streaming_search.rs  tui.rs  walker.rs
src/interactive/: mod.rs
src/list/: mod.rs
src/output/: formats.rs  formatter.rs  mod.rs
src/performance/: cache_manager.rs  io_optimizer.rs  memory_pool.rs  mod.rs  optimized_mmap.rs  parallel_processor.rs  zero_copy.rs
src/search/: algorithms.rs  cache.rs  engine.rs  mod.rs  plugins.rs  streaming.rs
src/test_utils/: data_generator.rs  mock_file_system.rs  mod.rs  performance_benchmark.rs  performance_harness.rs
tests/: cli_comprehensive.sh  cli_integration.rs  cli_validation_report.md  comprehensive_test_log.md  corrections_summary.md  final_validation_report.md  performance_test.rs  robustness_final_report.md  robustness_stress.sh  run_tests.sh  worker_timeout.rs
tests/benchmarks/: search_benchmarks.rs
tests/integration/: cli_integration_test.rs
tests/stress/: memory_stress_test.rs
tests/unit/: file_types_test.rs  processor_test.rs  search_algorithms_test.rs
