[package]
name = "rfgrep"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.2"
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
env_logger = "0.11.8"
indicatif = "0.17"
lazy_static = "1.4"
log = "0.4"
rayon = "1.10.0"
regex = "1.9"
simplelog = "0.12"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
