[package]
name = "rfgrep"
version = "0.1.0"
edition = "2024"
description = "Recursive file grep utility with advanced filtering - search, list, and analyze text files with regex support"
homepage = "https://github.com/kh3rld/rfgrep"
license = "MIT OR BSD 3-Clause" 
authors = ["Khalid Hussein <kh3rld.hussein@gmail.com>"]
repository = "https://github.com/kh3rld/rfgrep"
documentation = "https://docs.rs/rfgrep"
readme = "README.md"
keywords = [
    "grep",
    "search",
    "filesystem",
    "cli",
    "regex",
    "productivity",
    "text-processing"
]
categories = [
    "command-line-utilities",
    "filesystem",
    "text-processing"
]

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "kh3rld/rfgrep", workflow = "CI" }

[[bin]]
name = "rfgrep"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
arboard = "3.2"
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
env_logger = "0.11.8"
indicatif = "0.17"
lazy_static = "1.4"
log = "0.4"
rayon = "1.10.0"
regex = "1.9"
simplelog = "0.12"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }

# Development dependencies
[dev-dependencies]
assert_cmd = "2.0" 
predicates = "2.1" 
tempfile = "3.3"   

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
 