[package]
name = "rfgrep"
version = "0.2.0"
edition = "2024"
description = "Recursive file grep utility with advanced filtering - search, list, and analyze text files with regex support"
homepage = "https://github.com/kh3rld/rfgrep"
license = "BSD-3-Clause" 
authors = ["Khalid Hussein <kh3rld.hussein@gmail.com>"]
repository = "https://github.com/kh3rld/rfgrep"
documentation = "https://docs.rs/rfgrep"
readme = "README.md"
keywords = [
    "grep",
    "search",
    "filesystem",
    "cli",
    "text-processing"
]
categories = [
    "command-line-utilities",
    "filesystem",
    "text-processing"
]

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "kh3rld/rfgrep", workflow = "CI" }

[[bin]]
name = "rfgrep"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
arboard = "3.2"
backoff = { version = "0.4", features = ["tokio"] }
byte-unit = "5.1.6"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
console = "0.16"
dialoguer = "0.11"
env_logger = "0.11.8"
indicatif = { version = "0.18", features = ["improved_unicode"] }
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.16"
rayon = "1.10"
regex = { version = "1.9", features = ["unicode"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
simplelog = "0.12"
numfmt = "1.1.1"
memmap2 = "0.9"
clap_complete = "4.5.54"
parking_lot = "0.12.4"
thiserror = "1.0"
lru = "0.12"
infer = "0.13"
serde_with = "3.14.0"
dirs = "6.0.0"
toml = "0.9.4"
tokio = { version = "1.47.1", features = ["rt", "sync", "fs", "macros", "time", "net", "io-util"] }
chrono = "0.4"
serde_json = "1.0.142"

# Development dependencies
[dev-dependencies]
assert_cmd = "2.0" 
predicates = "3.1.3" 
tempfile = "3.3"   
criterion = "0.5"
rand = "0.8"
testing_logger = "0.1.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "compare"
harness = false
